refactor: Page 타입의 모임 조회 메서드 제거